# src/model/ipc/IIPCClient.ts
@@ -19,6 +19,7 @@ export interface IPCRecordedManageModel {
     updateVideoFileSize(videoFileId: apid.VideoFileId): Promise<void>;
     addVideoFile(option: AddVideoFileOption): Promise<apid.VideoFileId>;
     addUploadedVideoFile(option: apid.UploadedVideoFileInfo): Promise<void>;
+    createNewRecorded(option: apid.CreateNewRecordedOption): Promise<apid.RecordedId>;
     deleteVideoFile(videoFileId: apid.VideoFileId): Promise<void>;
     changeProtect(recordedId: apid.RecordedId, isProtect: boolean): Promise<void>;
     videoFileCleanup(): Promise<void>;
